--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">opção 1</a></li>
                 <li><a href="#">opção 2</a></li>
@@ -31,5 +33,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nihil, perferendis perspiciatis assumenda omnis numquam! At eligendi ducimus soluta quidem. Deserunt, necessitatibus cupiditate nam facere voluptas laudantium nisi unde sed.</p>
         </article>
     </main>
+
+    <script>
+        function clickMenu() {
+            if (itens.style.display == "block") {
+                itens.style.display = "none"
+            } else{
+                itens.style.display = "block"
+            }
+        }
+    </script>
 </body>
 </html>
